version/0.19/_sources/api/solver/_autosummary/settings/set_3.rst.txt
:orphan:

.. _set_3:

set
===

.. autoclass:: ansys.fluent.core.solver.settings_241.set_3.set
    :show-inheritance:

.. rubric:: Attributes

====================================================================================   ==============================================================================================

Attribute                                                                                                                                                                     Summary

====================================================================================   ==============================================================================================
:ref:`across_zone_boundaries <across_zone_boundaries>`                                                                                                'across_zone_boundaries' child.

:ref:`cell_function <cell_function_2>`                                                                                                                             Set cell function.

:ref:`load_distribution <load_distribution>`                                                                                                               Set partition load vector.

:ref:`merge <merge>`                                                                                                                              Set partition merging optimization.

:ref:`partition_origin_vector <partition_origin_vector>`                                                                                             'partition_origin_vector' child.

:ref:`pre_test <pre_test_1>`                                                                                                                  Set partition pre-testing optimization.

:ref:`smooth <smooth_1>`                                                                                                                        Set partition smoothing optimization.

:ref:`print_verbosity <print_verbosity>`                                                                                                               Set partition print verbosity.

:ref:`origin <origin_1>`                                                                                                                          Set partition merging optimization.

:ref:`laplace_smoothing <laplace_smoothing>`                                                                                                               'laplace_smoothing' child.

:ref:`nfaces_as_weights <nfaces_as_weights_1>`                                                                                                        Use number of faces as weights.

:ref:`face_area_as_weights <face_area_as_weights>`                                                                                               Use face area as connection weights.

:ref:`layering <layering>`                                                                                                                             Use layering for partitioning.

:ref:`solid_thread_weight <solid_thread_weight>`                                                                                                            Use solid thread weights.

:ref:`stretched_mesh_enhancement <stretched_mesh_enhancement>`                                                                             Enhancement for mesh with stretched cells.

:ref:`particle_weight <particle_weight>`                                                                                                                     Set DPM particle weight.

:ref:`vof_free_surface_weight <vof_free_surface_weight>`                                                                                                 Set VOF free surface weight.

:ref:`isat_weight <isat_weight>`                                                                                                                                     Set ISAT weight.

:ref:`fluid_solid_rebalance_after_read_case <fluid_solid_rebalance_after_read_case>`       Use optimal repartitioning after reading case file with significant solid and fluid zones.

:ref:`model_weighted_partition <model_weighted_partition>`                                                                                              Set model weighted partition.

:ref:`dpm_load_balancing <dpm_load_balancing>`                                                                                               Enable automatic load balancing for DPM.

====================================================================================   ==============================================================================================

.. rubric:: Methods

====================================   =============================================

Method                                                                       Summary

====================================   =============================================
:ref:`across_zones <across_zones_1>`       Enable partitioning by zone or by domain.

:ref:`all_off <all_off>`                                   Disable all optimization.

:ref:`all_on <all_on>`                                      Enable all optimization.

====================================   =============================================

.. rubric:: Included in:

==============================   ====================================

Parent                                                        Summary

==============================   ====================================
:ref:`partition <partition_3>`       Enter the partition domain menu.

==============================   ====================================

